CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES
09-09-05    Fixed a bug where non-indexed arrays could be overwritten
            (Lorenzo Alberton)
08-09-05    Some SMTP servers had problems with Mail_smtp's localhost default
            value, this is now catered for (Chris McKay)
08-09-05    Server vars now interpreted correctly on IIS 6.0, note:
            frontScriptName in config file MUST end with "?" (Miha Vrhovnik)
08-09-05    The 'passwordmgr_redirectToEdit' failed because of case-sensitivity,
            now fixed
02-09-05    Fallback to auto-detected language causing js errors in 
            FCK, fixed again
31-08-05    Some magic_quotes_gpc scenarios weren't dealt with correctly, now
            fixed (Eric Persson)
30-08-05    UserMgr Search/Sort/Pager fixes (Tobias Kuckuck)
30-08-05    Moved clone() emulation into constants.php
30-08-05    Seagull is now PHP5.1 compliant, this involved some local as
            well as PEAR modifications.

IMPROVEMENTS
12-09-05    Added RSS aggregator block
09-09-05    Improved session management so now it is possible to search sessions
            with more meaningful results and single sessions per user can be enforced.
            Also new "who's online" block added (Louay Gammo)
09-09-05    Organisations disabled by default, makes the system easier to 
            understand hopefully
09-09-05    Updated perms and perms and assignments to reflect new modules
08-09-05    Added new RSS exporter module (Fabio Bacigalupo)
08-09-05    Cleaned up implementation of alternating row colours with switchRowClass
            (Riccardo Magliocchetti)
08-09-05    Cleaned up stylesheet importing