@@ -227,13 +227,22 @@ class RegisterMgr extends SGL_Manager
         $aRolePerms = $this->da->getPermsByRoleId($defaultRoleId);
 
         //  then assign them to the user_permission table
-        foreach ($aRolePerms as $permId) {
-            $dbh->query('   INSERT INTO ' . $conf['table']['user_permission'] . '
-                            (user_permission_id, usr_id, permission_id)
-                            VALUES (' . $dbh->nextId($conf['table']['user_permission']) . ', ' . $oUser->usr_id . ", $permId)");
+        $ret = $this->da->addPermsByUserId($aRolePerms, $oUser->usr_id);
+        
+        //  assign preferences associated with org user belongs to
+        //  first get all prefs associated with user's org or default
+        //  prefs if orgs are disabled
+        if ($conf['OrgMgr']['enabled']) {
+            $aPrefs = $this->da->getUserPrefsByOrgId($oUser->organisation_id, SGL_RET_ID_VALUE);
+        } else {
+            $aPrefs = $this->da->getMasterPrefs();
         }
 
-        if ($success) {
+        //  then assign them to the user_preference table
+        $ret = $this->da->addPrefsByUserId($aPrefs, $oUser->usr_id);
+
+        //  check global error stack for any error that might have occurred
+        if ($success && !(count($GLOBALS['_SGL']['ERRORS']))) {
             //  send email confirmation according to config
             if ($conf['RegisterMgr']['sendEmailConfUser']) {
                 $bEmailSent = $this->_sendEmail($oUser);
