@@ -13,6 +13,8 @@ IMPROVEMENTS
 | VERSION: 0.4.6        |
 +-----------------------+
 BUGFIXES
+12-09-05    Fixed bug where prefs where not being correctly added for new
+            registrants
 09-09-05    Fixed a bug where non-indexed arrays could be overwritten
             (Lorenzo Alberton)
 08-09-05    Some SMTP servers had problems with Mail_smtp's localhost default
